add homepage and searching feature

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --color-purple-50:  #847CE0;
   --color-purple-100: #643FC9;
   --color-purple-200: #381D7F;
+  --color-purple-300: #ACA7E9;
 
   /* Pink Shades */
   --color-pink-50:   #F0B7FC;
